// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
       Expenses 
    </div>
    <div
      className="show-for-desktop"
    >
       Expense 
    </div>
    <div
      className="show-for-desktop"
    >
       Amount 
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
         No expenses 
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render ExpenseList with expenses correctly 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
       Expenses 
    </div>
    <div
      className="show-for-desktop"
    >
       Expense 
    </div>
    <div
      className="show-for-desktop"
    >
       Amount 
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={100}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note="With sugar"
    />
    <ExpenseListItem
      amount={200}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note="Without sugar"
    />
    <ExpenseListItem
      amount={300}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note="With chocolat"
    />
  </div>
</div>
`;
